fixes grid spacing on home page

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -20,20 +20,32 @@ html {
   width: 100%;
 }
 
-.sticky {
-  display: flex;
-  align-items: center;
-  margin: 0 auto;
-  height: 100vh;
-  position: sticky;
-  top: 0;
-  z-index: 1;
-}
-
+// Any sticky elements to left of the page
 .grid {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 4fr 3fr;
+
+  .sticky {
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
+    height: 100vh;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+  }
+
+  section.maps {
+    margin-top: 100px;
+
+    // Spacing between maps on right column
+    .map-card {
+      margin-bottom: 2em;
+    }
+  }
 }
+
+
 
 //TODO: 
 // Make 2 columns
